data/derived/fa15/progs/unify/prog0772.ml.out
Characters 203-217:
  |Times (e,f) -> (eval (e,x,y)) * (eval (f,x,y))
                  ^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
